[fix]cropper ファイル名修正

--- a/public/css/cropper-custom.css
+++ b/public/css/cropper-custom.css
@@ -14,3 +14,7 @@
 .img-container img {
     max-width: 100%;
 }
+
+#avatar {
+    display: none;
+}
